# imaplib2

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENCE  MANIFEST.in  README  README.markdown  README.md  README.py3  imaplib2.html  imaplib2.html.py3  imaplib2.py  imaplib2.py3  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml  test.yml
docs/: .gitattributes  conf.py  index.rst  reference.rst
imaplib2/: README.py3  __init__.py  imaplib2.py  imaplib2.py3
