[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["imaplib2/tests"]
source_pkgs = ["imaplib2"]

[tool.coverage.paths]
source = [
    ".",
    ".tox/*/lib/*/site-packages/",
    '.tox\\*\\Lib\\site-packages\\',
]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.23.0
requires =
    tox-wheel
    tox-gh-actions
envlist = py{36,37,38,39}
isolated_build = true

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
wheel = True
deps = 
    pytest
    pytest-cov
commands = 
    pytest {posargs}
"""
