[metadata]
name = imaplib2
version = 2.48.0
description = A threaded Python IMAP4 client.
author = Piers Lauder
url = https://github.com/bcoe/imaplib2
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages = find:

[bdist_wheel]
universal = 1
