[metadata]
name = imaplib2
version = attr: imaplib2.imaplib2.__version__
description = A threaded Python IMAP4 client.
long_description = file: README
long_description_content_type = text/plain
url = https://github.com/bcoe/imaplib2
author = Piers Lauder
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6

[bdist_wheel]
universal = 1
