[metadata]
name = imaplib2
version = attr: imaplib2.imaplib2.__version__
description = A threaded Python IMAP4 client.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jazzband/imaplib2/
author = Piers Lauder
license = MIT
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.6
